--- a/local-ntp.html
+++ b/local-ntp.html
@@ -7,11 +7,11 @@
 <head>
   <link rel="stylesheet" href="chrome-search://local-ntp/animations.css"></link>
   <link rel="stylesheet" href="chrome-search://local-ntp/constants.css"></link>
-  <link rel="stylesheet" href="chrome-search://local-ntp/custom-backgrounds.css"></link>
-  <link rel="stylesheet" href="chrome-search://local-ntp/doodles.css"></link>
-  <link rel="stylesheet" href="chrome-search://local-ntp/local-ntp.css"></link>
-  <link rel="stylesheet" href="chrome-search://local-ntp/theme.css"></link>
-  <link rel="stylesheet" href="chrome-search://local-ntp/voice.css"></link>
+  <link rel="stylesheet" href="custom-backgrounds.css"></link>
+  <link rel="stylesheet" href="doodles.css"></link>
+  <link rel="stylesheet" href="local-ntp.css"></link>
+  <link rel="stylesheet" href="theme.css"></link>
+  <link rel="stylesheet" href="voice.css"></link>
   <meta http-equiv="Content-Security-Policy"
       content="object-src 'none';child-src chrome-search://most-visited/ https://*.google.com/ ;script-src 'strict-dynamic' 'sha256-EVjR8L4xuo0c7UNzAtLmKQoojKIjdHqYIqdanwmukFQ=' 'sha256-7Cb/hw63HxkRDnIh6Nlq9BCoC9GoILc14LE65ABFEiA=' 'sha256-rfz9Zof79G2YaFr+4+j2fvNjNEnOdl5YnT+9F3HvmdY=' 'sha256-bC49jEFHb2vvCeIbKbHKxNMnI7+6P9d0YhG8jfTvRzU=' 'sha256-6h/FfYkbXEq16S7SMLcO05mJkdz56y2b8HtPdLZmMhA=' 'sha256-F/uxTxmIB+TXvkVBPdiX36hMiHjGTtrHZWFzoRAgyoY=' 'sha256-WVPlolOVRFWWys6KZPEDoZVA4GovEUCNiB6iiYJmTLc=';">
   <script src="chrome-search://local-ntp/animations.js"
