--- a/local-ntp.html
+++ b/local-ntp.html
@@ -14,17 +14,16 @@
   <link rel="stylesheet" href="voice.css"></link>
   <meta http-equiv="Content-Security-Policy"
       content="object-src 'none';child-src chrome-search://most-visited/ https://*.google.com/ ;script-src 'strict-dynamic' 'sha256-EVjR8L4xuo0c7UNzAtLmKQoojKIjdHqYIqdanwmukFQ=' 'sha256-7Cb/hw63HxkRDnIh6Nlq9BCoC9GoILc14LE65ABFEiA=' 'sha256-rfz9Zof79G2YaFr+4+j2fvNjNEnOdl5YnT+9F3HvmdY=' 'sha256-bC49jEFHb2vvCeIbKbHKxNMnI7+6P9d0YhG8jfTvRzU=' 'sha256-6h/FfYkbXEq16S7SMLcO05mJkdz56y2b8HtPdLZmMhA=' 'sha256-F/uxTxmIB+TXvkVBPdiX36hMiHjGTtrHZWFzoRAgyoY=' 'sha256-WVPlolOVRFWWys6KZPEDoZVA4GovEUCNiB6iiYJmTLc=';">
-  <script src="chrome-search://local-ntp/animations.js"
+  <script src="animations.js"
       integrity="sha256-EVjR8L4xuo0c7UNzAtLmKQoojKIjdHqYIqdanwmukFQ="></script>
-  <script src="chrome-search://local-ntp/config.js"
+  <script src="config.js"
       integrity="sha256-WVPlolOVRFWWys6KZPEDoZVA4GovEUCNiB6iiYJmTLc="></script>
-  <script src="chrome-search://local-ntp/custom-backgrounds.js"
+  <script src="custom-backgrounds.js"
       integrity="sha256-7Cb/hw63HxkRDnIh6Nlq9BCoC9GoILc14LE65ABFEiA="></script>
-  <script src="chrome-search://local-ntp/doodles.js"
+  <script src="doodles.js"
       integrity="sha256-rfz9Zof79G2YaFr+4+j2fvNjNEnOdl5YnT+9F3HvmdY="></script>
-  <script src="chrome-search://local-ntp/local-ntp.js"
-      integrity="sha256-bC49jEFHb2vvCeIbKbHKxNMnI7+6P9d0YhG8jfTvRzU="></script>
-  <script src="chrome-search://local-ntp/utils.js"
+  <script src="local-ntp.js"
+      integrity="sha256-bC49jEFHb2vvCeIbKbHKxNMnI7+6P9d0YhG8jfTvRzU="utils.js"
       integrity="sha256-6h/FfYkbXEq16S7SMLcO05mJkdz56y2b8HtPdLZmMhA="></script>
   <meta charset="utf-8">
   <meta name="google" value="notranslate">
@@ -205,7 +204,7 @@
 
   <div id="one-google-end-of-body"></div>
 
-  <script defer src="chrome-search://local-ntp/voice.js"
+  <script defer src="voice.js"
       integrity="sha256-F/uxTxmIB+TXvkVBPdiX36hMiHjGTtrHZWFzoRAgyoY="></script>
 </body>
 </html>
